# omoplata

./: .gitignore  Cargo.toml  LICENSE  Omoplata_design_doc.md  README.md
.github/workflows/: ci.yml
crates/omoplata-algebra/: Cargo.toml
crates/omoplata-algebra/src/: commute.rs  doc.rs  kernel.rs  lib.rs  merge.rs  patch.rs  rebase.rs  tests.rs  validation.rs
crates/omoplata-cli/: Cargo.toml
crates/omoplata-cli/src/: main.rs
crates/omoplata-cli/tests/: cli.rs  concurrency.rs  e2e.rs  workspaces_concurrency.rs
crates/omoplata-drivers/: Cargo.toml
crates/omoplata-drivers/src/: error.rs  lib.rs  line.rs  mergiraf.rs  rust.rs  tests.rs
crates/omoplata-git/: Cargo.toml
crates/omoplata-git/src/: error.rs  export.rs  gate.rs  gitdir.rs  import.rs  lib.rs  loose.rs  object.rs  pack.rs  refs.rs
crates/omoplata-git/src/wire/: fetch.rs  mod.rs  pkt.rs
crates/omoplata-git/tests/: real_git.rs  wire.rs
crates/omoplata-identity/: Cargo.toml
crates/omoplata-identity/src/: change.rs  definition.rs  error.rs  lib.rs  submission.rs
crates/omoplata-sem/: Cargo.toml
crates/omoplata-sem/src/: embed.rs  error.rs  lib.rs  real.rs  vector.rs
crates/omoplata-sem/tests/: fastembed.rs
crates/omoplata-store/: Cargo.toml
crates/omoplata-store/src/: lib.rs  lock.rs  object.rs
crates/omoplata-work/: Cargo.toml
crates/omoplata-work/src/: autorebase.rs  error.rs  lib.rs  oplog.rs  queue.rs  revset.rs  stack.rs  workspace.rs
demo/release-queues/: README.md  run.sh
demo/swarm-vs-gitflow/: README.md  run.sh
demo/swarm-vs-gitflow/base/: Cargo.toml
demo/swarm-vs-gitflow/base/src/: lib.rs
demo/swarm-vs-gitflow/patches/: agent-1.patch  agent-2.patch  agent-3.patch  agent-4.patch  agent-5.patch
docs/: Omoplata_design_doc.md  user-guide.md
docs/adr/: 0002-loose-object-store.md  0003-verification-strategy.md  0004-merge-drivers.md  0005-git-interop-roundtrip-gate.md  0006-semantic-embeddings.md  0007-dynamic-validation.md  0008-multi-writer-concurrency.md  0009-named-landing-queues.md  README.md
verus/: README.md  omoplata_algebra_model.rs  verify.sh
