[workspace]
resolver = "2"
members = ["crates/omoplata-cli", "crates/omoplata-store"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/autumn-foundation/omoplata"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
