[workspace]
resolver = "2"
members = [
    "crates/omoplata-algebra",
    "crates/omoplata-cli",
    "crates/omoplata-drivers",
    "crates/omoplata-git",
    "crates/omoplata-identity",
    "crates/omoplata-store",
    "crates/omoplata-work",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/autumn-foundation/omoplata"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
