[package]
name = "omoplata-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "omo"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
omoplata-store = { path = "../omoplata-store" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
