[package]
name = "omoplata-drivers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
tempfile = "3"
omoplata-algebra = { path = "../omoplata-algebra" }
omoplata-identity = { path = "../omoplata-identity" }
