[package]
name = "omoplata-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"

[dev-dependencies]
tempfile = "3"
