[package]
name = "omoplata-work"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
omoplata-identity = { path = "../omoplata-identity" }
omoplata-store = { path = "../omoplata-store" }
omoplata-algebra = { path = "../omoplata-algebra" }

[dev-dependencies]
tempfile = "3"
